# rmus-rendering-challenge

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rmus/renderingchallenge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Camera.cpp  Camera.h  InputEventState.cpp  InputEventState.h  Octree.cpp  Octree.h  OctreeData.cpp  OctreeData.h  RenderBox.cpp  RenderBox.h  Renderer.cpp  Renderer.h  RendererState.cpp  RendererState.h  Shader.h  Testbench.cpp  Testbench.h  main.cpp
app/src/main/java/com/rmus/renderingchallenge/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rmus/renderingchallenge/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: .gitignore  CMakeLists.txt  PointCloudData.h  README.md  build.bat  build.sh  generate_test_datasets.sh  inspect_pointcloud.cpp  point_cloud_generator.cpp
